Container Launcher Error logged.